// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`OpenAPI Schema Builders buildAllSchemas should match snapshot 1`] = `
{
  "ErrorResponse": {
    "properties": {
      "error": {
        "description": "Error message",
        "type": "string",
      },
      "requestId": {
        "description": "Request ID for debugging",
        "type": "string",
      },
    },
    "required": [
      "error",
    ],
    "type": "object",
  },
  "RequestTracing": {
    "properties": {
      "correlationId": {
        "description": "Correlation ID for tracking",
        "format": "uuid",
        "type": "string",
      },
      "requestId": {
        "description": "Unique request ID",
        "format": "uuid",
        "type": "string",
      },
    },
    "type": "object",
  },
  "RunRequest": {
    "properties": {
      "changedFilesAllowlist": {
        "description": "File patterns to allow changes in",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "idempotencyKey": {
        "description": "Idempotency key for safe retries",
        "format": "uuid",
        "type": "string",
      },
      "maxDiffBytes": {
        "description": "Max diff size in bytes",
        "type": "integer",
      },
      "publishMode": {
        "description": "Publishing mode after validation: pr creates a normal pull request (controller default when omitted), draft_pr creates a draft pull request, branch pushes only, auto publishes when credentials are available and skips if missing, none skips publishing",
        "enum": [
          "auto",
          "none",
          "branch",
          "pr",
          "draft_pr",
        ],
        "type": "string",
      },
      "ref": {
        "default": "main",
        "description": "Git branch/tag/commit",
        "type": "string",
      },
      "repoUrl": {
        "description": "Git repository URL",
        "format": "uri",
        "type": "string",
      },
      "startupCheck": {
        "description": "Start a worker container and exit after boot checks",
        "type": "boolean",
      },
      "startupCheckMode": {
        "description": "Startup check depth: boot-only container smoke test or baseline validation dry-run",
        "enum": [
          "boot",
          "baseline-validation",
        ],
        "type": "string",
      },
      "taskMode": {
        "description": "Task mode",
        "enum": [
          "patch",
          "inspect",
        ],
        "type": "string",
      },
      "taskPrompt": {
        "description": "Task prompt for Pi agent",
        "type": "string",
      },
      "timeoutSeconds": {
        "description": "Per-run timeout in seconds",
        "maximum": 10800,
        "minimum": 60,
        "type": "integer",
      },
      "tracing": {
        "description": "Request tracing identifiers",
        "type": "object",
      },
      "validationCommands": {
        "description": "Validation commands to run",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "webhookConfig": {
        "description": "Webhook configuration for job events",
        "type": "object",
      },
    },
    "required": [
      "repoUrl",
    ],
    "type": "object",
  },
  "RunResponse": {
    "properties": {
      "cached": {
        "description": "True when returned from idempotency replay",
        "type": "boolean",
      },
      "completedAt": {
        "description": "ISO 8601 timestamp when the job completed",
        "format": "date-time",
        "type": "string",
      },
      "correlationId": {
        "description": "Request correlation ID for tracing",
        "type": "string",
      },
      "createdAt": {
        "description": "ISO 8601 timestamp when the job was created",
        "format": "date-time",
        "type": "string",
      },
      "error": {
        "description": "Error message if the job failed",
        "type": "string",
      },
      "exitCode": {
        "description": "Exit code from kaseki execution",
        "type": "integer",
      },
      "failureClass": {
        "description": "Classification of failure (e.g., validation_failed, timeout)",
        "type": "string",
      },
      "id": {
        "description": "Unique kaseki instance ID (kaseki-N)",
        "example": "kaseki-42",
        "type": "string",
      },
      "requestId": {
        "description": "Unique request ID",
        "type": "string",
      },
      "status": {
        "description": "Current job status",
        "enum": [
          "queued",
          "running",
          "completed",
          "failed",
        ],
        "type": "string",
      },
    },
    "required": [
      "id",
      "status",
      "createdAt",
    ],
    "type": "object",
  },
  "StatusResponse": {
    "properties": {
      "artifacts": {
        "properties": {
          "analysisMd": {
            "type": "boolean",
          },
          "availableFiles": {
            "description": "List of available artifact files",
            "items": {
              "type": "string",
            },
            "type": "array",
          },
          "failureJson": {
            "type": "boolean",
          },
          "metadataJson": {
            "type": "boolean",
          },
          "resultSummaryMd": {
            "type": "boolean",
          },
          "stderrLog": {
            "type": "boolean",
          },
        },
        "type": "object",
      },
      "elapsedSeconds": {
        "description": "Elapsed time since job start in seconds",
        "type": "number",
      },
      "error": {
        "description": "Error message (only if failed)",
        "type": "string",
      },
      "exitCode": {
        "description": "Exit code (only if completed)",
        "type": "integer",
      },
      "failureClass": {
        "description": "Failure classification (only if failed)",
        "type": "string",
      },
      "failureJsonContent": {
        "description": "Structured failure information (only if failed)",
        "type": "object",
      },
      "id": {
        "description": "Kaseki instance ID",
        "type": "string",
      },
      "progress": {
        "properties": {
          "message": {
            "description": "Detailed progress message",
            "type": "string",
          },
          "percentComplete": {
            "description": "Progress percentage (0-100)",
            "maximum": 100,
            "minimum": 0,
            "type": "integer",
          },
          "stage": {
            "description": "Current stage name",
            "type": "string",
          },
          "updatedAt": {
            "description": "ISO 8601 timestamp of last update",
            "format": "date-time",
            "type": "string",
          },
        },
        "type": "object",
      },
      "resultDir": {
        "description": "Path to results directory on server",
        "type": "string",
      },
      "resultSummaryContent": {
        "description": "Human-readable markdown summary (truncated to 64KB)",
        "type": "string",
      },
      "status": {
        "enum": [
          "queued",
          "running",
          "completed",
          "failed",
        ],
        "type": "string",
      },
      "timeoutRiskPercent": {
        "description": "Percentage of timeout used (0-100+); values >85 indicate imminent timeout",
        "type": "number",
      },
    },
    "required": [
      "id",
      "status",
      "elapsedSeconds",
      "timeoutRiskPercent",
    ],
    "type": "object",
  },
  "WebhookConfig": {
    "properties": {
      "events": {
        "description": "Event types to deliver",
        "items": {
          "type": "string",
        },
        "type": "array",
      },
      "retryPolicy": {
        "description": "Retry configuration",
        "type": "object",
      },
      "secret": {
        "description": "HMAC secret for signature verification",
        "type": "string",
      },
      "url": {
        "description": "Webhook URL",
        "format": "uri",
        "type": "string",
      },
    },
    "type": "object",
  },
}
`;

exports[`OpenAPI Schema Builders buildErrorResponseSchema should match snapshot 1`] = `
{
  "properties": {
    "error": {
      "description": "Error message",
      "type": "string",
    },
    "requestId": {
      "description": "Request ID for debugging",
      "type": "string",
    },
  },
  "required": [
    "error",
  ],
  "type": "object",
}
`;

exports[`OpenAPI Schema Builders buildRunRequestSchema should match snapshot 1`] = `
{
  "properties": {
    "changedFilesAllowlist": {
      "description": "File patterns to allow changes in",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "idempotencyKey": {
      "description": "Idempotency key for safe retries",
      "format": "uuid",
      "type": "string",
    },
    "maxDiffBytes": {
      "description": "Max diff size in bytes",
      "type": "integer",
    },
    "publishMode": {
      "description": "Publishing mode after validation: pr creates a normal pull request (controller default when omitted), draft_pr creates a draft pull request, branch pushes only, auto publishes when credentials are available and skips if missing, none skips publishing",
      "enum": [
        "auto",
        "none",
        "branch",
        "pr",
        "draft_pr",
      ],
      "type": "string",
    },
    "ref": {
      "default": "main",
      "description": "Git branch/tag/commit",
      "type": "string",
    },
    "repoUrl": {
      "description": "Git repository URL",
      "format": "uri",
      "type": "string",
    },
    "startupCheck": {
      "description": "Start a worker container and exit after boot checks",
      "type": "boolean",
    },
    "startupCheckMode": {
      "description": "Startup check depth: boot-only container smoke test or baseline validation dry-run",
      "enum": [
        "boot",
        "baseline-validation",
      ],
      "type": "string",
    },
    "taskMode": {
      "description": "Task mode",
      "enum": [
        "patch",
        "inspect",
      ],
      "type": "string",
    },
    "taskPrompt": {
      "description": "Task prompt for Pi agent",
      "type": "string",
    },
    "timeoutSeconds": {
      "description": "Per-run timeout in seconds",
      "maximum": 10800,
      "minimum": 60,
      "type": "integer",
    },
    "tracing": {
      "description": "Request tracing identifiers",
      "type": "object",
    },
    "validationCommands": {
      "description": "Validation commands to run",
      "items": {
        "type": "string",
      },
      "type": "array",
    },
    "webhookConfig": {
      "description": "Webhook configuration for job events",
      "type": "object",
    },
  },
  "required": [
    "repoUrl",
  ],
  "type": "object",
}
`;

exports[`OpenAPI Schema Builders buildRunResponseSchema should match snapshot 1`] = `
{
  "properties": {
    "cached": {
      "description": "True when returned from idempotency replay",
      "type": "boolean",
    },
    "completedAt": {
      "description": "ISO 8601 timestamp when the job completed",
      "format": "date-time",
      "type": "string",
    },
    "correlationId": {
      "description": "Request correlation ID for tracing",
      "type": "string",
    },
    "createdAt": {
      "description": "ISO 8601 timestamp when the job was created",
      "format": "date-time",
      "type": "string",
    },
    "error": {
      "description": "Error message if the job failed",
      "type": "string",
    },
    "exitCode": {
      "description": "Exit code from kaseki execution",
      "type": "integer",
    },
    "failureClass": {
      "description": "Classification of failure (e.g., validation_failed, timeout)",
      "type": "string",
    },
    "id": {
      "description": "Unique kaseki instance ID (kaseki-N)",
      "example": "kaseki-42",
      "type": "string",
    },
    "requestId": {
      "description": "Unique request ID",
      "type": "string",
    },
    "status": {
      "description": "Current job status",
      "enum": [
        "queued",
        "running",
        "completed",
        "failed",
      ],
      "type": "string",
    },
  },
  "required": [
    "id",
    "status",
    "createdAt",
  ],
  "type": "object",
}
`;
